<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/px500"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical">

    <com.fitgreat.doctorface_top.view.SignItemView
        android:id="@+id/item_patient_name"
        android:layout_width="@dimen/px350"
        android:layout_marginTop="@dimen/px10"
        android:layout_height="wrap_content"
        app:signItemTitle="@string/patient_name" />

    <com.fitgreat.doctorface_top.view.SignItemView
        android:id="@+id/item_patient_phone"
        android:layout_width="@dimen/px350"
        android:layout_height="wrap_content"
        app:signItemTitle="@string/patient_phone" />

    <com.fitgreat.doctorface_top.view.SignItemView
        android:id="@+id/item_reservation_type"
        android:layout_width="@dimen/px350"
        android:layout_height="wrap_content"
        app:signItemTitle="@string/reservation_type" />

    <com.fitgreat.doctorface_top.view.SignItemView
        android:id="@+id/item_patient_age"
        android:layout_width="@dimen/px350"
        android:layout_height="wrap_content"
        app:signItemTitle="@string/patient_age" />

    <com.fitgreat.doctorface_top.view.SignItemView
        android:id="@+id/item_reservation_department"
        android:layout_width="@dimen/px350"
        android:layout_height="wrap_content"
        app:signItemTitle="@string/reservation_department" />


    <com.fitgreat.doctorface_top.view.SignItemView
        android:id="@+id/item_reservation_doctor"
        android:layout_width="@dimen/px350"
        android:layout_height="wrap_content"
        app:signItemTitle="@string/reservation_doctor" />

    <com.fitgreat.doctorface_top.view.SignItemView
        android:id="@+id/item_reservation_time"
        android:layout_width="@dimen/px350"
        android:layout_height="wrap_content"
        app:signItemTitle="@string/reservation_time" />

    <com.fitgreat.doctorface_top.view.SignItemView
        android:id="@+id/item_patient_symptom"
        android:layout_width="@dimen/px350"
        android:layout_height="wrap_content"
        app:signItemTitle="@string/patient_symptom" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:background="@color/line" />

    <Button
        android:id="@+id/sign_in_bt"
        android:layout_width="@dimen/px180"
        android:layout_height="@dimen/px40"
        android:layout_margin="@dimen/px20"
        android:background="@drawable/sign_bt_back"
        android:text="@string/sign_title"
        android:textColor="@android:color/white"
        android:textSize="15sp" />
</LinearLayout>