<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="@dimen/px22"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/base_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/px10"
        android:text="@string/base_title"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/base_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/px10"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/px10"
        android:text="@string/base_content"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base_title" />

    <RadioGroup
        android:id="@+id/answer_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px35"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base_content">

        <RadioButton
            android:id="@+id/answer_no_bt"
            android:layout_width="@dimen/px110"
            android:layout_height="@dimen/px35"
            android:background="@drawable/bt_back_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/answer_no"
            android:textColor="@drawable/bt_text_color_selector"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/answer_yes_bt"
            android:layout_width="@dimen/px110"
            android:layout_height="@dimen/px35"
            android:layout_marginLeft="@dimen/px25"
            android:background="@drawable/bt_back_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/answer_yes"
            android:textColor="@drawable/bt_text_color_selector" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>